include/lpa.h

/**
 * control derived type as a C struct
 */
struct lpa_control_type {

    /// \brief
    /// use C or Fortran sparse matrix indexing
    bool f_indexing;

    /// \brief
    /// error and warning diagnostics occur on stream error
    int error;

    /// \brief
    /// general output occurs on stream out
    int out;

    /// \brief
    /// the level of output required is specified by print_level
    /// (>= 2 turns on LA)4 output)
    int print_level;

    /// \brief
    /// any printing will start on this iteration
    int start_print;

    /// \brief
    /// any printing will stop on this iteration
    int stop_print;

    /// \brief
    /// at most maxit inner iterations are allowed
    int maxit;

    /// \brief
    /// maximum number of iterative refinements allowed
    int max_iterative_refinements;

    /// \brief
    /// initial size for real array for the factors and other data
    int min_real_factor_size;

    /// \brief
    /// initial size for integer array for the factors and other data
    int min_integer_factor_size;

    /// \brief
    /// the initial seed used when generating random numbers
    int random_number_seed;

    /// \brief
    /// specifies the unit number to write generated SIF file describing the
    /// current problem
    int sif_file_device;

    /// \brief
    /// specifies the unit number to write generated QPLIB file describing the
    /// current problem
    int qplib_file_device;

    /// \brief
    /// any bound larger than infinity in modulus will be regarded as infinite
    real_wp_ infinity;

    /// \brief
    /// the tolerable relative perturbation of the data (A,g,..) defining 
    /// the problem
    real_wp_ tol_data;

    /// \brief
    /// any constraint violated by less than feas_tol will be considered to be
    /// satisfied
    real_wp_ feas_tol;

    /// \brief
    /// pivot threshold used to control the selection of pivot elements in the
    /// matrix factorization. Any potential pivot which is less than the largest
    /// entry in its row times the threshold is excluded as a candidate
    real_wp_ relative_pivot_tolerance;

    /// \brief
    /// limit to control growth in the upated basis factors. A refactorization
    /// occurs if the growth exceeds this limit
    real_wp_ growth_limit;

    /// \brief
    /// any entry in the basis smaller than this is considered zero
    real_wp_ zero_tolerance;

    /// \brief
    /// any solution component whose change is smaller than a tolerence times
    /// the largest change may be considered to be zero
    real_wp_ change_tolerance;

    /// \brief
    /// any pair of constraint bounds (c_l,c_u) or (x_l,x_u) that are closer
    /// than identical_bounds_tol will be reset to the average of their values
    real_wp_ identical_bounds_tol;

    /// \brief
    /// the maximum CPU time allowed (-ve means infinite)
    real_wp_ cpu_time_limit;

    /// \brief
    /// the maximum elapsed clock time allowed (-ve means infinite)
    real_wp_ clock_time_limit;

    /// \brief
    /// if .scale is true, the problem will be automatically scaled prior to
    /// solution. This may improve computation time and accuracy
    bool scale;

    /// \brief
    /// should the dual problem be solved rather than the primal?
    bool dual;

    /// \brief
    /// should a warm start using the data in C_stat and X_stat be attempted?
    bool warm_start;

    /// \brief
    /// should steepest-edge weights be used to detetrmine the variable
    /// leaving the basis?
    bool steepest_edge;

    /// \brief
    /// if .space_critical is true, every effort will be made to use as little
    /// space as possible. This may result in longer computation time
    bool space_critical;

    /// \brief
    /// if .deallocate_error_fatal is true, any array/pointer deallocation error
    /// will terminate execution. Otherwise, computation will continue
    bool deallocate_error_fatal;

    /// \brief
    /// if .generate_sif_file is .true. if a SIF file describing the current
    /// problem is to be generated
    bool generate_sif_file;

    /// \brief
    /// if .generate_qplib_file is .true. if a QPLIB file describing the current
    /// problem is to be generated
    bool generate_qplib_file;

    /// \brief
    /// name of generated SIF file containing input problem
    char sif_file_name[31];

    /// \brief
    /// name of generated QPLIB file containing input problem
    char qplib_file_name[31];

    /// \brief
    /// all output lines will be prefixed by .prefix(2:LEN(TRIM(.prefix))-1)
    /// where .prefix contains the required string enclosed in
    /// quotes, e.g. "string" or 'string'
    char prefix[31];
};
/**
 * time derived type as a C struct
 */
struct lpa_time_type {

    /// \brief
    /// the total CPU time spent in the package
    real_wp_ total;

    /// \brief
    /// the CPU time spent preprocessing the problem
    real_wp_ preprocess;

    /// \brief
    /// the total clock time spent in the package
    real_wp_ clock_total;

    /// \brief
    /// the clock time spent preprocessing the problem
    real_wp_ clock_preprocess;
};
/**
 * inform derived type as a C struct
 */
struct lpa_inform_type {

    /// \brief
    /// return status. See LPA_solve for details
    int status;

    /// \brief
    /// the status of the last attempted allocation/deallocation
    int alloc_status;

    /// \brief
    /// the name of the array for which an allocation/deallocation error ocurred
    char bad_alloc[81];

    /// \brief
    /// the total number of iterations required
    int iter;

    /// \brief
    /// the final value of la04's job argument
    int la04_job;

    /// \brief
    /// any extra information from an unsuccesfull call to LA04 (LA04's 
    /// RINFO(35)
    int la04_job_info;

    /// \brief
    /// the value of the objective function at the best estimate of the solution
    /// determined by LPA_solve
    real_wp_ obj;

    /// \brief
    /// the value of the primal infeasibility
    real_wp_ primal_infeasibility;

    /// \brief
    /// is the returned "solution" feasible?
    bool feasible;

    /// \brief
    /// the information array from LA04
    real_wp_ RINFO[40];

    /// \brief
    /// timings (see above)
    struct lpa_time_type time;

    /// \brief
    /// inform parameters for RPD
    struct rpd_inform_type rpd_inform;
};
// *-*-*-*-*-*-*-*-*-*-    L P A  _ I N I T I A L I Z E    -*-*-*-*-*-*-*-*-*

void lpa_initialize( void **data, 
                     struct lpa_control_type *control,
                     int *status );
/*!<
 Set default control values and initialize private data

  @param[in,out] data holds private internal data

  @param[out] control is a struct containing control information 
              (see lpa_control_type)

  @param[out] status is a scalar variable of type int, that gives
    the exit status from the package. Possible values are (currently):  
    \li  0. The import was succesful.
*/

// *-*-*-*-*-*-*-*-*-    L P A  _ R E A D _ S P E C F I L E   -*-*-*-*-*-*-*

void lpa_read_specfile( struct lpa_control_type *control, 
                        const char specfile[] );
/*!<
  Read the content of a specification file, and assign values associated 
  with given keywords to the corresponding control parameters

  @param[in,out]  control is a struct containing control information 
              (see lpa_control_type)
  @param[in]  specfile is a character string containing the name of
              the specification file
*/

// *-*-*-*-*-*-*-*-*-*-*-*-    L P A  _ I M P O R T   -*-*-*-*-*-*-*-*-*-*

void lpa_import( struct lpa_control_type *control,
                 void **data,
                 int *status,
                 int n,
                 int m,
                 const char A_type[], 
                 int A_ne, 
                 const int A_row[],
                 const int A_col[], 
                 const int A_ptr[] );
/*!<
 Import problem data into internal storage prior to solution. 

 @param[in] control is a struct whose members provide control
  paramters for the remaining prcedures (see lpa_control_type)

 @param[in,out] data holds private internal data

 @param[in,out] status is a scalar variable of type int, that gives
    the exit status from the package. Possible values are:
  \li  0. The import was succesful
  \li -1. An allocation error occurred. A message indicating the 
       offending array is written on unit control.error, and the 
       returned allocation status and a string containing the name 
       of the offending array are held in inform.alloc_status and 
       inform.bad_alloc respectively.
  \li -2. A deallocation error occurred.  A message indicating the 
       offending array is written on unit control.error and the 
       returned allocation status and a string containing the
       name of the offending array are held in 
       inform.alloc_status and inform.bad_alloc respectively.
  \li -3. The restrictions n > 0 or m > 0 or requirement that A_type contains
       its relevant string 'dense', 'coordinate' or 'sparse_by_rows'
        has been violated.

 @param[in] n is a scalar variable of type int, that holds the number of
    variables.

 @param[in] m is a scalar variable of type int, that holds the number of
    general linear constraints.

 @param[in]  A_type is a one-dimensional array of type char that specifies the
   \link main_unsymmetric_matrices unsymmetric storage scheme \endlink 
   used for the constraint Jacobian, \f$A\f$. It should be one of 'coordinate', 
  'sparse_by_rows' or 'dense; lower or upper case variants are allowed.

 @param[in]  A_ne is a scalar variable of type int, that holds the number of
   entries in \f$A\f$ in the sparse co-ordinate storage scheme. 
   It need not be set for any of the other schemes.

 @param[in]  A_row is a one-dimensional array of size A_ne and type int, that 
   holds the row indices of \f$A\f$ in the sparse co-ordinate storage scheme. 
   It need not be set for any of the other schemes, 
   and in this case can be NULL.

 @param[in]  A_col is a one-dimensional array of size A_ne and type int,
   that holds the column indices of \f$A\f$ in either the sparse co-ordinate, 
   or the sparse row-wise storage scheme. It need not be set when the 
   dense or diagonal storage schemes are used, and in this case can be NULL.

 @param[in]  A_ptr is a one-dimensional array of size n+1 and type int,
   that holds the starting position of each row of \f$A\f$, as well as the 
   total number of entries plus one, in the sparse row-wise storage scheme. 
   It need not be set when the other schemes are used, 
   and in this case can be NULL.
*/


//  *-*-*-*-*-*-*-*-*-   L P A _ R E S E T _ C O N T R O L   -*-*-*-*-*-*-*-*

void lpa_reset_control( struct lpa_control_type *control,
                        void **data,
                        int *status );
/*!< 
 Reset control parameters after import if required.

 @param[in] control is a struct whose members provide control
  paramters for the remaining prcedures (see lpa_control_type)

 @param[in,out] data holds private internal data

 @param[in,out] status is a scalar variable of type int, that gives
    the exit status from the package. Possible values are:
  \li  0. The import was succesful.
 */

//  -*-*-*-*-*-*-*-*-*-*-*-   L P A _ S O L V E _ L P  -*-*-*-*-*-*-*-*-*-*-*-*-

void lpa_solve_lp( void **data,
                   int *status,
                   int n, 
                   int m, 
                   const real_wp_ g[], 
                   const real_wp_ f, 
                   int a_ne,
                   const real_wp_ A_val[], 
                   const real_wp_ c_l[], 
                   const real_wp_ c_u[], 
                   const real_wp_ x_l[], 
                   const real_wp_ x_u[], 
                   real_wp_ x[], 
                   real_wp_ c[], 
                   real_wp_ y[], 
                   real_wp_ z[], 
                   int x_stat[], 
                   int c_stat[] );
/*!<
 Solve the linear program.

 @param[in,out] data holds private internal data

 @param[in,out] status is a scalar variable of type int, that gives
    the entry and exit status from the package. \n
    Possible exit are:
  \li  0. The run was succesful.

  \li -1. An allocation error occurred. A message indicating the offending
       array is written on unit control.error, and the returned allocation
       status and a string containing the name of the offending array
       are held in inform.alloc_status and inform.bad_alloc respectively.
  \li -2. A deallocation error occurred.  A message indicating the offending
       array is written on unit control.error and the returned allocation
       status and a string containing the name of the offending array
       are held in inform.alloc_status and inform.bad_alloc respectively.
  \li -3. The restrictions n > 0 and m > 0 or requirement that A_type contains
       its relevant string 'dense', 'coordinate' or 'sparse_by_rows'
        has been violated.
  \li -5. The simple-bound constraints are inconsistent.
  \li -7. The constraints appear to have no feasible point.
  \li -9. The analysis phase of the factorization failed; the return status
         from the factorization package is given in the component
         inform.factor_status
  \li -10. The factorization failed; the return status from the factorization
         package is given in the component inform.factor_status.
  \li -11. The solution of a set of linear equations using factors from the
         factorization package failed; the return status from the factorization
         package is given in the component inform.factor_status.
  \li -16. The problem is so ill-conditioned that further progress is 
           impossible.
  \li -17. The step is too small to make further impact.
  \li -18. Too many iterations have been performed. This may happen if
         control.maxit is too small, but may also be symptomatic of
         a badly scaled problem.
  \li -19. The CPU time limit has been reached. This may happen if
         control.cpu_time_limit is too small, but may also be symptomatic of
         a badly scaled problem.
 
 @param[in] n is a scalar variable of type int, that holds the number of
    variables

 @param[in] m is a scalar variable of type int, that holds the number of
    general linear constraints.

 @param[in] g is a one-dimensional array of size n and type double, that 
    holds the linear term \f$g\f$ of the objective function. 
    The j-th component of g, j = 0, ... ,  n-1, contains  \f$g_j \f$.
  
 @param[in] f is a scalar of type double, that 
    holds the constant term \f$f\f$ of the objective function. 
  
 @param[in] a_ne is a scalar variable of type int, that holds the number of 
    entries in the constraint Jacobian matrix \f$A\f$.
 
 @param[in] A_val is a one-dimensional array of size a_ne and type double, 
    that holds the values of the entries of the constraint Jacobian matrix 
    \f$A\f$ in any of the available storage schemes. 

 @param[in] c_l is a one-dimensional array of size m and type double, that 
    holds the lower bounds \f$c^l\f$ on the constraints \f$A x\f$.
    The i-th component of c_l, i = 0, ... ,  m-1, contains  \f$c^l_i\f$.
  
 @param[in] c_u is a one-dimensional array of size m and type double, that 
    holds the upper bounds \f$c^l\f$ on the constraints \f$A x\f$.
    The i-th component of c_u, i = 0, ... ,  m-1, contains  \f$c^u_i\f$.
  
 @param[in] x_l is a one-dimensional array of size n and type double, that 
    holds the lower bounds \f$x^l\f$ on the variables \f$x\f$.
    The j-th component of x_l, j = 0, ... ,  n-1, contains  \f$x^l_j\f$.
  
 @param[in] x_u is a one-dimensional array of size n and type double, that 
    holds the upper bounds \f$x^l\f$ on the variables \f$x\f$.
    The j-th component of x_u, j = 0, ... ,  n-1, contains  \f$x^l_j\f$.
  
 @param[in,out] x is a one-dimensional array of size n and type double, that 
    holds the values \f$x\f$ of the optimization variables. The j-th component 
    of x, j = 0, ... , n-1, contains \f$x_j\f$.
  
 @param[out] c is a one-dimensional array of size m and type double, that 
    holds the residual \f$c(x)\f$.
    The i-th component of c, i = 0, ... ,  m-1, contains  \f$c_i(x) \f$.
  
 @param[in,out] y is a one-dimensional array of size n and type double, that 
    holds the values \f$y\f$ of the Lagrange multipliers for the general 
    linear constraints. The j-th component 
    of y, i = 0, ... , m-1, contains \f$y_i\f$.
  
 @param[in,out] z is a one-dimensional array of size n and type double, that 
    holds the values \f$z\f$ of the dual variables. 
    The j-th component of z, j = 0, ... , n-1, contains \f$z_j\f$.
  
 @param[out] x_stat is a one-dimensional array of size n and type int, that 
    gives the optimal status of the problem variables. If x_stat(j) is negative,
    the variable \f$x_j\f$ most likely lies on its lower bound, if it is
    positive, it lies on its upper bound, and if it is zero, it lies
    between its bounds.

 @param[out] c_stat is a one-dimensional array of size m and type int, that 
    gives the optimal status of the general linear constraints. If c_stat(i) is 
    negative, the constraint value \f$a_i^Tx\f$ most likely lies on its 
    lower bound, if it is positive, it lies on its upper bound, and if it 
    is zero, it lies  between its bounds.
*/  

// *-*-*-*-*-*-*-*-*-*-    L P A  _ I N F O R M A T I O N   -*-*-*-*-*-*-*-*

void lpa_information( void **data,
                      struct lpa_inform_type *inform,
                      int *status );
/*!<
  Provides output information

  @param[in,out] data holds private internal data

  @param[out] inform is a struct containing output information
              (see lpa_inform_type) 

  @param[out] status is a scalar variable of type int, that gives
              the exit status from the package.
              Possible values are (currently):
  \li  0. The values were recorded succesfully
*/

// *-*-*-*-*-*-*-*-*-*-    L P A  _ T E R M I N A T E   -*-*-*-*-*-*-*-*-*-*

void lpa_terminate( void **data, 
                    struct lpa_control_type *control, 
                    struct lpa_inform_type *inform );